--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -102,7 +102,8 @@
 
 &ls_gpio0_porta {
 	pinctrl-names = "default";
-	pinctrl-0 = < &lsio_gpio0_1
+	pinctrl-0 = < &lsio_gpio0_0
+				  &lsio_gpio0_1
 				  &lsio_gpio0_2
 				  &lsio_gpio0_3
 				  &lsio_gpio0_4
