--- a/arch/arm64/configs/hobot_x5_soc_perf_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_perf_defconfig
@@ -243,6 +243,7 @@ CONFIG_SYSCON_REBOOT_MODE=y
 CONFIG_SENSORS_MR75203=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
+CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 CONFIG_WATCHDOG=y
