--- a/drivers/soc/hobot/Kconfig
+++ b/drivers/soc/hobot/Kconfig
@@ -9,3 +9,4 @@ source "drivers/soc/hobot/bpu/Kconfig"
 source "drivers/soc/hobot/socinfo/Kconfig"
 source "drivers/soc/hobot/reboot_reason/Kconfig"
 source "drivers/soc/hobot/ddr_monitor/Kconfig"
+source "drivers/soc/hobot/firewall/Kconfig"
