--- a/arch/arm64/boot/dts/hobot/x5-memory.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-memory.dtsi
@@ -35,6 +35,12 @@
 			linux,cma-default;
 		};
 
+                /* use as firewall default address */
+                firewall_ddr_default: firewall_ddr_default@8FE7F000 {
+			reg = <0x0 0x8FE7F000 0x0 0x00001000>;
+			no-map;
+                };
+
 		adsp_ddr: adsp_ddr@8FE80000 {
 			reg = <0x0 0x8FE80000 0x0 0x02200000>;
 			no-map;
