dts: fix [X5-947] Add clock bindings for gpu pd
Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: I390a207b9b1e9a06923959641393a78f961ef1c0

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -1884,6 +1884,8 @@
 				reg = <X5_GPU>;
 				#power-domain-cells = <0>;
 				gpu-supply = <&vdd08_gpu_reg>;
+				clocks = <&hpsclks X5_GPU_PCLK>,
+					 <&hpsclks X5_GPU_GC8000L_CLK>;
 			};
 			x5_isp_pd@x5-isp-pd {
 				reg = <X5_ISP>;
