bpu: clock: fix [X5-986] Use mclk 2x gate to instead mclk generator
Summary:
1. bpu clock in depended on mclk 2x generator, this lock is critical,
use 2x gate to instead
Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: Ib8ebb7ecf6901fc2ee99e2533a5e932043966f14

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2067,7 +2067,7 @@
 			cnn-id = <0>;
 			resets = <&socrst BPU_RESET>;
 			reset-names = "cnn_rst";
-			clocks = <&hpsclks X5_BPU_MCLK_2X>;
+			clocks = <&hpsclks X5_BPU_MCLK_2X_CLK>;
 			clock-names = "cnn_mclk";
 			power-domains = <&power X5_BPU>;
 			operating-points-v2 = <&bpu_opp_table>;
