arm64: dts: hobot: feat [X5-263] Modify dts to adapt to EVB-V2.
Change-Id: I670f712ede1473281c1fd45f762fecce562a9321
Signed-off-by: linke.jiang <linke.jiang@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -39,13 +39,14 @@
 	gua_audio_rpc_wrapper:audio-rpc-wrapper {
 		compatible = "gua,audio-rpc-wrapper";
 		rpmsg-enable;
-		status = "disabled";
+		status = "okay";
 	};
 
 	ipc_wrapper:ipc-wrapper {
 		compatible = "gua,ipc-wrapper";
 		rpmsg-enable;
-		status = "disabled";
+		status = "okay";
+		gua-ipc = <&ipc_instance0>;
 	};
 
 	sound_misc_0:misc-hifi {
@@ -55,7 +56,7 @@
 										>;
 		msg-wrapper = <&ipc_wrapper>;
 		memory-region = <&adsp_bsp_reserved>;
-		status = "disabled";
+		status = "okay";
 	};
 
 	sound_cpu:cpu-dai {
@@ -63,7 +64,7 @@
 		msg-wrapper = <&ipc_wrapper>;
 		gua,pcm-buffer-size = <0x1E000>;
 		pcm-rpmsg-channel-mapping = <0x00>, <0x00>, <0x00>, <0x00>, <0x00>;
-		status = "disabled";
+		status = "okay";
 	};
 
 	sound-machine {
@@ -71,7 +72,7 @@
 		model = "gua-audio";
 		cpu-dai = <&sound_cpu>;
 		memory-region = <&audio_reserved>;
-		status = "disabled";
+		status = "okay";
 	};
 
 	vdd08_gpu_reg: vdd08_gpu_reg@3 {
@@ -365,19 +366,28 @@
 };
 
 &mailbox0 {
-	status = "disabled";
+	status = "okay";
 };
 
 &ipc_instance0 {
-	status = "disabled";
+	status = "okay";
+	shm-addr = <&adsp_ipc_reserved>;
+	local-offset = <0x0>;
+	remote-offset = <0x400>;
 };
 
 &ipc_instance1 {
-	status = "disabled";
+	status = "okay";
+	shm-addr = <&adsp_ipc_reserved>;
+	local-offset = <0x800>;
+	remote-offset = <0xc00>;
 };
 
 &ipc_instance2 {
-	status = "disabled";
+	status = "okay";
+	shm-addr = <&adsp_ipc_reserved>;
+	local-offset = <0x1000>;
+	remote-offset = <0x4000>;
 };
 
 &pvt {
@@ -385,9 +395,11 @@
 };
 
 &remoteproc_hifi5 {
-	status = "disabled";
+	status = "okay";
 	hifi5-rpmsg-channel-mapping = <0x00>, <0x00>;
 	msg-wrapper = <&ipc_wrapper>;
+	shm-addr = <&adsp_bsp_reserved>;
+	remoteproc-ipc = <&ipc_instance1>;
 };
 
 &hpsclks {
