net: stmmac: feat [X5-1002] Optimize ethernet driver for phy-reset and ip reset.
- Including some reset tunning...
- eg. phy-reset timming
- ethernet ip reset timming
- mainly reduce the phy-reset and reset delay time.

Change-Id: I06c27f7f012dace482468b9a7443b564031f10bd
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2546,13 +2546,26 @@
 					 <&hpsclks X5_HSIO_ENET_PTP_REFCLK>;
 				clock-names = "axi_clk", "rgmii_clk", "stmmaceth",
 					      "pclk", "ptp_ref";
+				resets = <&socrst HSIO_ENET_RESET>;
+				reset-names = "enet_rst";
 				snps,burst-map = <5>;
 				snps,force_sf_dma_mode = <1>;
 				phy-mode = "rgmii-id";
 				phy-handle = <&ethphy0>;
+
 				snps,mtl-tx-config = <&txnode>;
 				snps,mtl-rx-config = <&rxnode>;
-				resets = <&socrst HSIO_ENET_RESET>;
+
+				mdio {
+					compatible = "snps,dwmac-mdio";
+					#address-cells = <1>;
+					#size-cells = <0>;
+					ethphy0: ethernet-phy@1 {
+						compatible =
+							"ethernet-phy-ieee802.3-c22";
+						reg = <1>;
+					};
+				};
 
 				txnode:txnode@1 {
 					snps,tx-queues-to-use = <1>;
@@ -2607,17 +2620,6 @@
 					};
 					rxqueue7: rxqueue@8 {
 						snps,dcb-algorithm;
-					};
-				};
-
-				mdio {
-					compatible = "snps,dwmac-mdio";
-					#address-cells = <1>;
-					#size-cells = <0>;
-					ethphy0: ethernet-phy@1 {
-						compatible =
-							"ethernet-phy-ieee802.3-c22";
-						reg = <1>;
 					};
 				};
 			};
