net: stmmac: feat [X5-1002] Handle soc phy interface register in ethernet driver.
- Init ethernet driver with phy-interface(rmii, rgmii).
- Some soc-specific register is different for different phy-interface.
- For example, pin voltage level, ref-clk, pinmux for tx_clk sel and so on.

Change-Id: I16a34cb1aefc9e3eaa1463aea27f3d1625b7f58b
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2535,7 +2535,8 @@
 			gmac_tsn: gmac-tsn@35010000 {
 				compatible = "x5,dwc-qos-ethernet-4.10";
 				status = "disabled";
-				reg = <0x35010000 0x10000>;
+				reg = <0x35010000 0x10000>,
+					<0x35050000 0x4>;
 				interrupt-parent = <&gic>;
 				interrupts = <GIC_SPI 24 IRQ_TYPE_LEVEL_HIGH>;
 				interrupt-names = "macirq";
