dts: feat [X5-839] add qspi-boot for hpsclks
-if qspi-boot, set top_apb_clk and qspi_bus_clk to 100M

Signed-off-by: ming.yu <ming.yu@horizon.cc>
Change-Id: If608390d01e4b6599c255dc3d5777bc585292cf9

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -1840,6 +1840,7 @@
 			clocks = <&osc>, <&clk_32k>, <&audio_externel_clk>;
 			clock-names = "osc", "32k", "audio_externel";
 			pll-table = <1>;
+			qspi-boot = <0>;
 			idle-dev = <&noc_idle>;
 			#clock-cells = <1>;
 			status = "disabled";
