iio: adc: guc_adc: fix [X5-1016] Update calibration data calculation
calibration data is 6bit complement, If it is greater than 32, it is a negative number

Signed-off-by: zhiwei01.li <zhiwei01.li@horizon.cc>
Change-Id: Ib4d4343f5f6de173c10adc26820e4a2f9dc38a66

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3648,8 +3648,8 @@
 				clock-names = "adc-clk","adc-pclk";
 				assigned-clock-rates = <32000000>;
 				/* disable efuse binding by default */
-				//nvmem-cells = <&efuse_adc_offset>, <&efuse_adc_trimming>;
-				//nvmem-cell-names = "adc-offset", "adc-trimming";
+				nvmem-cells = <&efuse_adc_offset>, <&efuse_adc_trimming>;
+				nvmem-cell-names = "adc-offset", "adc-trimming";
 				vref-supply = <&reg_adc_vref_1v8>;
 				#io-channel-cells = <1>;
 				guc,adc-channels = <0 1 2 3 4 5 6 7>;
