devfreq: x5-ddrc: fix [X5-1028] Update opp table to Hz
Signed-off-by: ming.yu <ming.yu@horizon.cc>
Change-Id: I8c1d96b341d27afae485459ce39cc5a984c2a57d

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -61,31 +61,31 @@
 		compatible = "operating-points-v2";
 
 		opp-266M {
-			opp-hz = /bits/ 64 <266>;
+			opp-hz = /bits/ 64 <266000000>;
 		};
 
 		opp-1066M {
-			opp-hz = /bits/ 64 <1066>;
+			opp-hz = /bits/ 64 <1066000000>;
 		};
 
 		opp-2133M {
-			opp-hz = /bits/ 64 <2133>;
+			opp-hz = /bits/ 64 <2133000000>;
 		};
 
 		opp-3200M {
-			opp-hz = /bits/ 64 <3200>;
+			opp-hz = /bits/ 64 <3200000000>;
 		};
 
 		opp-2844M {
-				opp-hz = /bits/ 64 <2844>;
+				opp-hz = /bits/ 64 <2844000000>;
 		};
 
 		opp-3733M {
-				opp-hz = /bits/ 64 <3733>;
+				opp-hz = /bits/ 64 <3733000000>;
 		};
 
 		opp-4266M {
-				opp-hz = /bits/ 64 <4266>;
+				opp-hz = /bits/ 64 <4266000000>;
 		};
 
 	};
