--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2028,11 +2028,11 @@
 			power-domains = <&power X5_GPU>;
 			consumer-dev = <&gc8000>;
 
-			clocks-num = <3>;
-			clocks = <&hpsclks X5_GPU_PCLK>, <&hpsclks X5_GPU_GC8000L_CLK>, <&hpsclks X5_GPU_GC820_CLK>;
-			clock-names = "gpu_pclk", "gpu3d_clk", "gpu2d_clk";
-
-			status = "okay";
+			clocks-num = <6>;
+			clocks = <&hpsclks X5_GPU_PCLK>, <&hpsclks X5_GPU_GC8000L_ACLK>, <&hpsclks X5_GPU_GC8000L_CLK>,<&hpsclks X5_GPU_PCLK>, <&hpsclks X5_GPU_GC820_ACLK>, <&hpsclks X5_GPU_GC820_CLK>;
+			clock-names = "pclk", "aclk", "clk","pclk1", "aclk1", "clk1";
+			/* To do because GPU CLKs is not ready*/
+			status = "disabled";
 			ports-num = <2>;
 			ports-off = <0x0008 0x0088>;
 		};
@@ -2073,11 +2073,11 @@
 			power-domains = <&power X5_GPU>;
 			consumer-dev = <&gc820>;
 
-			clocks-num = <2>;
-			clocks = <&hpsclks X5_GPU_PCLK>, <&hpsclks X5_GPU_GC820_CLK>;
-			clock-names = "gpu_pclk", "gpu2d_clk";
-
-			status = "okay";
+			clocks-num = <6>;
+			clocks = <&hpsclks X5_GPU_PCLK>, <&hpsclks X5_GPU_GC8000L_ACLK>, <&hpsclks X5_GPU_GC8000L_CLK>,<&hpsclks X5_GPU_PCLK>, <&hpsclks X5_GPU_GC820_ACLK>, <&hpsclks X5_GPU_GC820_CLK>;
+			clock-names = "pclk", "aclk", "clk","pclk1", "aclk1", "clk1";
+			/* To do because GPU CLKs is not ready*/
+			status = "disabled";
 			ports-num = <1>;
 			ports-off = <0x0008>;
 		};
