--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -599,6 +599,16 @@
 &mipi_dsi0 {
 
 	status = "okay";
+
+	ports {
+		port@1 {
+			reg = <1>;
+			mipi_dsi_out: endpoint {
+				remote-endpoint = <&panel_in>;
+			};
+		};
+	};
+
 	dsi_panel0@0 {
 		compatible = "jc-050hd134";
 		reg = <0>;
