--- a/arch/arm64/boot/dts/hobot/x5-evb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dts
@@ -577,6 +577,16 @@
 &mipi_dsi0 {
 
 	status = "okay";
+
+	ports {
+		port@1 {
+			reg = <1>;
+			mipi_dsi_out: endpoint {
+				remote-endpoint = <&panel_in>;
+			};
+		};
+	};
+
 	dsi_panel0@0 {
 		compatible = "jc-050hd134";
 		reg = <0>;
@@ -594,14 +604,6 @@
 		};
 	};
 
-};
-
-/*For boards that do not need display module,
-the following ports need to be deleted*/
-&bt1120_bridge {
-	ports {
-		/delete-node/ port@1;
-	};
 };
 
 &dphy0 {
