--- a/arch/arm64/boot/dts/hobot/x5-fpga.dts
+++ b/arch/arm64/boot/dts/hobot/x5-fpga.dts
@@ -328,6 +328,13 @@
 						<&bt1120_bridge_out>;
 				};
 			};
+
+			port@1 {
+				reg = <1>;
+				bt1120_bridge_out: endpoint {
+					remote-endpoint = <&hdmi_bridge_in>;
+				};
+			};
 		};
 	};
 };
