--- a/arch/arm64/boot/dts/hobot/x5-svb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-svb.dts
@@ -205,6 +205,14 @@
 						<&bt1120_bridge_out>;
 				};
 			};
+
+			port@1 {
+				reg = <1>;
+
+				bt1120_bridge_out: endpoint {
+					remote-endpoint = <&hdmi_bridge_in>;
+				};
+			};
 		};
 	};
 };
@@ -715,6 +723,14 @@
 &mipi_dsi0 {
 	status = "okay";
 
+	ports {
+		port@1 {
+			reg = <1>;
+			mipi_dsi_out: endpoint {
+				remote-endpoint = <&panel_in>;
+			};
+		};
+	};
 
 	dsi_panel0@0 {
 		compatible = "atk,md0550";
